# ETS---FroQ

ETS - FroQ/: Dockerfile  README.md  pyproject.toml  requirements.txt
ETS - FroQ/configs/: translation.yaml
ETS - FroQ/src/ets_translator/: __init__.py
ETS - FroQ/src/ets_translator/data/: datasets.py
ETS - FroQ/src/ets_translator/inference/: cli.py  server.py
ETS - FroQ/src/ets_translator/training/: train.py
ETS - FroQ/src/ets_translator/utils/: config.py
